Version 1.0.1-devel
-------------------
- Improve output_format API to support begin/end document marks
  and to allow state in the output_format instance (to allow
  numbering output sentences, for example).


Version 1.0.0 [27 May 16]
-------------------------
- Initial public release.