@@ -827,6 +827,7 @@ Class input_format
     virtual ~input_format() {}
 
     virtual bool read_block(istream& is, string& block) const = 0;
+    virtual void reset_document() {};
     virtual void set_text(string_piece text, bool make_copy = false) = 0;
     virtual bool next_sentence(sentence& s, string& error) = 0;
 
@@ -852,6 +853,19 @@ input_format::read_block()
 Read a portion of input, which is guaranteed to contain only complete sentences.
 Such portion is usually a paragraph (text followed by an empty line) or a line,
 but it may be more complex (i.e., in a XML-like format).
+
+
+input_format::reset_document()
+------------------------------
+
+  virtual void reset_document() {};
+
+Resets the input_format instance state. Such state is needed not only for
+remembering unprocessed text of the last set_text call, but also for correct
+inter-block state tracking (for example in a tokenizer which returns
+document-level offsets, or in a tokenizer which tracks inter-sentence spaces -
+if you pass only spaces to set_text, these spaces has to accumulate and be
+returned as preceeding spaces of the next sentence).
 
 
 input_format::set_text()
@@ -1326,6 +1340,7 @@ Main Classes
 
   class InputFormat {
    public:
+    virtual void resetDocument();
     virtual void setText(const char* text);
     virtual bool nextSentence(Sentence& s, ProcessingError* error = nullptr);
 
