@@ -65,6 +65,7 @@ typedef vector<Sentence> Sentences;
 ```
 class InputFormat {
  public:
+  virtual void resetDocument();
   virtual void setText(const char* text);
   virtual bool nextSentence(Sentence& s, ProcessingError* error = nullptr);
 
