@@ -84,6 +84,7 @@ class input_format {
   virtual ~input_format() {}
 
   virtual bool read_block(std::istream& is, std::string& block) const = 0;
+  virtual void reset_document();
   virtual void set_text(string_piece text, bool make_copy = false) = 0;
   virtual bool next_sentence(sentence& s, std::string& error) = 0;
 
